Release v2.38.0: Massive Linux Media Controller fixes
- Fixed DBus poll thread deadlock by using ProcessBuilder to consume stdout/stderr concurrently.
- Replaced single player polling with `--all-players` metadata dump.
- Implemented intelligent player scoring system to always prioritize `plasma-browser-integration` over `chromium` for reliable avatar extraction.
- Added URLDecoder to fix `file://` URLs failing with spaces or special characters.
- Replaced NativeImage.read with robust ImageIO parser to support JPEG formats properly, bypassing Minecraft's strict PNG requirement that caused 'Bad PNG Signature' crashes.